<resources>
    <string name="app_name">Pop Movies</string>
    <string name="title_activity_detail">Movie Detail</string>
    <string name="release_date">Release Date</string>
    <string name="title">Original Title</string>
    <string name="AverageVote">Average vote</string>
    <string name="overview">overview</string>
    <string name="action_sort_by">Sort by</string>
    <string name="action_sort_by_popularity">Most Popular</string>
    <string name="action_sort_by_rating">Highest Rated</string>
    <string name="action_sort_by_favorite">Favorite</string>
    <string name="details">Details</string>
    <string name="rating">Rating</string>

    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="action_share">Share</string>
    <string name="cast">Cast</string>

    <string name="hint_name">Name</string>
    <string name="hint_in_role_of">In the Role of</string>

    <string name="hint_movie_title">Movie Title</string>
    <string name="sort_by_upcoming_movies">Upcoming Movies</string>
    <string name="movie_title">Title</string>
    <string name="released">Released</string>
    <string name="hint_movie_release_date">24 jan</string>
    <string name="hint_movie_duration">140min</string>
    <string name="duration">Duration</string>
    <string name="action_favorite">favourite</string>
    <string name="removed_from_favorites">Removed from Favorites</string>
    <string name="added_to_favorites">Added to favorites</string>

    <string name="content_authority">com.example.user.app.popmovies</string>

</resources>
