<android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/movieContainer"
    tools:context="fragments.DetailFragment"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:orientation="vertical"
            android:paddingTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/grid_item_movie_height">

                <ImageView
                    android:id="@+id/movie_detail_title_image_view_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/titleView1"
                    android:text="title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:padding="5dp"
                    android:layout_alignParentBottom="true"
                    android:textColor="@android:color/white"
                    android:background="#80000000" />

            </RelativeLayout>

            <TextView
                android:id="@+id/overView"
                android:text="these movie is based on...."
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">


            <ImageView
                    android:id="@+id/imageThumbnail"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/movie_detail_title_image_view_height"
                    android:layout_weight="3"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="5"
                    android:gravity="right"
                    android:orientation="vertical"
                    android:paddingLeft="8dp">

                    <TextView
                        android:id="@+id/titleView"
                        style="@style/MovieDetailsTextStringStyle"
                        android:gravity="end"
                        android:text="@string/movie_title" />

                    <com.iarcuschin.simpleratingbar.SimpleRatingBar
                        android:id="@+id/movieRating"
                        android:layout_width="@dimen/simpleratingbar_width"
                        android:layout_height="0dp"
                        android:layout_gravity="end|right"
                        android:layout_weight="1"
                        android:gravity="end|right"
                        app:srb_borderColor="@color/colorPrimaryDark"
                        app:srb_fillColor="@color/colorPrimary"
                        app:srb_isIndicator="true"
                        app:srb_numberOfStars="5"
                        app:srb_starSize="@dimen/srb_starSize"
                        app:srb_stepSize="0.1" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/MovieDetailsTextStringStyle"
                            android:text="@string/released" />

                        <TextView
                            android:id="@+id/dateView"
                            style="@style/MovieDetailsTextValueStyle"
                            android:hint="@string/hint_movie_release_date" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/MovieDetailsTextStringStyle"
                            android:text="@string/duration" />

                        <TextView
                            android:id="@+id/movie_duration_text_view"
                            style="@style/MovieDetailsTextValueStyle"
                            android:hint="@string/hint_movie_duration" />
                    </LinearLayout>
                </LinearLayout>
             </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/detail_trailers_cardview"
                android:layout_width="match_parent"
                app:cardElevation="@dimen/cardview_compat_inset_shadow"
                app:cardCornerRadius="4dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/trailers"
                        android:textStyle="bold" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:layout_marginTop="20dp">

                        <com.linearlistview.LinearListView
                            android:id="@+id/detail_trailers"
                            android:layout_width="wrap_content"
                            android:splitMotionEvents="true"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:divider="?android:dividerHorizontal"
                            android:showDividers="middle" />

                    </HorizontalScrollView>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/detail_reviews_cardview"
                android:layout_width="match_parent"
                app:cardElevation="@dimen/cardview_compat_inset_shadow"
                app:cardCornerRadius="4dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/reviews"
                        android:textStyle="bold" />

                    <com.linearlistview.LinearListView
                        android:id="@+id/detail_reviews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:divider="?android:dividerHorizontal"
                        android:showDividers="middle" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/detail_starcast_cardview"
                android:layout_width="match_parent"
                app:cardElevation="@dimen/cardview_compat_inset_shadow"
                app:cardCornerRadius="4dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/cast"
                        android:textStyle="bold" />

                    <com.linearlistview.LinearListView
                        android:id="@+id/detail_cast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:divider="?android:dividerHorizontal"
                        android:showDividers="middle" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            </LinearLayout>

    </android.support.v4.widget.NestedScrollView>